[tool.poetry]
name = "zoo_python"
version = "0.1.0"
description = ""
authors = ["Adarah <lucasyharada@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.8"
kazoo = "^2.7.0"
orjson = "^2.6.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
ptvsd = "^4.3.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
